--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,17 @@ aside .title{
     height: 100%;
     width: 100%;
 }
+
+
+.maxvalues_form{
+    padding-top: 40px;
+}
+
+.maxvalues_form .values{
+	font-size: 16px;
+    padding: 10px;
+}
+
 section .description{
 	font-family: "Montserrat Regular";
 	font-size: 16px;
